infrastructure/k8s/backend_deployments.yaml
# user service : minidomo/gemdeck:be-user-service-latest
# trade service : minidomo/gemdeck:be-trade-service-latest
# card service : minidomo/gemdeck:be-card-service-latest
# listing service : minidomo/gemdeck:be-listing-service-latest
# eureka server : minidomo/gemdeck:be-eureka-server-latest
# api gateway : minidomo/gemdeck:be-gateway-latest
# auth service : minidomo/gemdeck:be-auth-service-latest
# react frontend : minidomo/gemdeck:fe-react-frontend-latest
# angular frontend : minidomo/gemdeck:fe-angular-frontend-latest
# single spa frontend : minidomo/gemdeck:fe-single-spa-frontend-latest

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: minidomo/gemdeck:be-eureka-server-latest
          ports:
            - containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  selector:
    app: eureka-server  
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listing-service
  template:
    metadata:
      labels:
        app: listing-service
    spec:
      containers:
        - name: listing-service
          image: minidomo/gemdeck:be-listing-service-latest
          ports:
            - containerPort: LISTING_SERVICE_PORT
---
apiVersion: v1
kind: Service
metadata:
  name: listing-service
spec:
  selector:
    app: listing-service  
  ports:
    - protocol: TCP
      port: LISTING_SERVICE_PORT
      targetPort: LISTING_SERVICE_PORT
  type: ClusterIP
